# Capture2Gif

./: .gitignore  App.pbi  Button.pbi  CMakeLists.txt  Capture.pbi  Capture.pbp  Capture2Gif  Capture2Gif.pbi  Core.pbi  Editor.pbi  Gif.lib  Image.pbi  ImagesToGif.pbi  Info.plist  Makefile  Memory.pbi  Platform.pbi  Prefs.pbi  README.md  Scr33nC0rd3r.pbp  Tests.pbi  Widget.pbi  Win.pbi  api.cpp  api.h  gif.h  gif.lib  prefs.pref  prefs.prefs
Capture2Gif.app/Contents/MacOS/: Capture2Gif
